--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,7 +32,7 @@ jobs:
 
       - uses: taiki-e/install-action@v2
         with:
-          tool: nextest,cargo-makle
+          tool: nextest,cargo-make
 
       - name: Lint and format
         run: cargo make lint
