--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,9 @@ anyhow = "1.0.75"
 once_cell = "1.18.0"
 serde = { version = "1.0.192", features = ["derive"] }
 serde_json = "1.0.108"
+
+[profile.release]
+strip = true
+opt-level = "z"
+lto = true
+codegen-units = 1
